--- a/codigo/autos.html
+++ b/codigo/autos.html
@@ -25,7 +25,7 @@
                 Ferrari <br>
             </u>
         </h4>
-        <img src="ASSETS/ferrari.png" alt="icono de ferrari">
+        <img src="../ASSETS/ferrari.png" alt="icono de ferrari">
     </article>
     <article>
         <h4>
@@ -33,7 +33,7 @@
                 Ford mustag <br>
             </u>
         </h4>
-        <img src="ASSETS/mustang.png" alt="icono de mustang">
+        <img src="../ASSETS/mustang.png" alt="icono de mustang">
     </article>
 
 </body>
