--- a/codigo/lanchas.html
+++ b/codigo/lanchas.html
@@ -25,7 +25,7 @@
                 Lancha <br>
             </u>
         </h4>
-        <img src="ASSETS/lancha.png" alt="icono de lancha">
+        <img src="../ASSETS/lancha.png" alt="icono de lancha">
     </article>
 </body>
 </html>
