--- a/codigo/motos.html
+++ b/codigo/motos.html
@@ -25,7 +25,7 @@
                 kawasaki ninja <br>
             </u>
         </h4>
-        <img src="ASSETS/moto.png" alt="icono de moto">
+        <img src="../ASSETS/moto.png" alt="icono de moto">
     </article>
 </body>
 </html>
