--- a/codigo/login.html
+++ b/codigo/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <h1><b1> CarsMotors </b1></h1>
     <header>
@@ -23,9 +23,9 @@
 
 <body> 
     <h1><b1> Ingrese sus Datos </b1></h1>
+
     <form action="" method="post">
-            
-        <div>
+      <div>
             <label for="txtNombre">
                 Nombre:
                 <input type="text" id="txtNombre" name="txtNombre" placeholder="Ingrese su nombre">
