--- a/pages/motos.html
+++ b/pages/motos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motos</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
         <h1><b1> Motos </b1></h1>
@@ -25,7 +25,7 @@
                 kawasaki ninja <br>
             </u>
         </h4>
-        <img src="../ASSETS/moto.png" alt="icono de moto">
+        <img src="../assets/moto.png" alt="icono de moto">
     </article>
 </body>
 </html>
