--- a/pages/lanchas.html
+++ b/pages/lanchas.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lanchas</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1><b1> Lanchas </b1></h1>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"> Home</a> </li>
-                 <li><a href="login.html"> Login</a> </li>
-                 <li><a href="autos.html"> Autos</a> </li>
-                 <li><a href="motos.html"> Motos</a> </li>
-                 <li><a href="lanchas.html"> Lanchas</a> </li>
+                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
+                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
+                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
+                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
+                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
             </ul>
             
         </nav>
@@ -25,7 +25,7 @@
                 Lancha <br>
             </u>
         </h4>
-        <img src="../ASSETS/lancha.png" alt="icono de lancha">
+        <img src="../assets/lancha.png" alt="icono de lancha">
     </article>
 </body>
 </html>
