--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="../index.html"> Home</a> </li>
-                 <li><a href="../pages/login.html"> Login</a> </li>
-                 <li><a href="../pages/autos.html"> Autos</a> </li>
-                 <li><a href="../pages/motos.html"> Motos</a> </li>
-                 <li><a href="../pages/lanchas.html"> Lanchas</a> </li>
+                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
+                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
+                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
+                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
+                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
             </ul>
         </nav>
         
