--- a/pages/autos.html
+++ b/pages/autos.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autos</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1><b1> Autos </b1></h1>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"> Home</a> </li>
-                 <li><a href="login.html"> Login</a> </li>
-                 <li><a href="autos.html"> Autos</a> </li>
-                 <li><a href="motos.html"> Motos</a> </li>
-                 <li><a href="lanchas.html"> Lanchas</a> </li>
+                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
+                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
+                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
+                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
+                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
             </ul>
             
         </nav>
@@ -25,7 +25,7 @@
                 Ferrari <br>
             </u>
         </h4>
-        <img src="../ASSETS/ferrari.png" alt="icono de ferrari">
+        <img src="../assets/ferrari.png" alt="icono de ferrari">
     </article>
     <article>
         <h4>
@@ -33,7 +33,7 @@
                 Ford mustag <br>
             </u>
         </h4>
-        <img src="../ASSETS/mustang.png" alt="icono de mustang">
+        <img src="../assets/mustang.png" alt="icono de mustang">
     </article>
 
 </body>
