--- a/pages/login.html
+++ b/pages/login.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <h1><b1> CarsMotors </b1></h1>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"> Home</a> </li>
-                 <li><a href="login.html"> Login</a> </li>
-                 <li><a href="autos.html"> Autos</a> </li>
-                 <li><a href="motos.html"> Motos</a> </li>
-                 <li><a href="lanchas.html"> Lanchas</a> </li>
+                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
+                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
+                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
+                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
+                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
             </ul>
         </nav>
         
