--- a/pages/autos.html
+++ b/pages/autos.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autos</title>
     <link rel="stylesheet" href="../css/styles.css">
+
+
 </head>
 <body>
-    <h1><b1> Autos </b1></h1>
+    <h1><b> Autos </b></h1>
     <header>
         <nav>
             <ul>
-                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
-                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
-                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
-                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
-                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
+                <li><a href="../index.html"> Home</a> </li>
+                 <li><a href="login.html"> Login</a> </li>
+                 <li><a href="autos.html"> Autos</a> </li>
+                 <li><a href="motos.html"> Motos</a> </li>
+                 <li><a href="lanchas.html"> Lanchas</a> </li>
             </ul>
             
         </nav>
+    </header>
     <article>
         <h4>
             <u>
@@ -30,7 +33,7 @@
     <article>
         <h4>
             <u>
-                Ford mustag <br>
+                Ford mustang <br>
             </u>
         </h4>
         <img src="../assets/mustang.png" alt="icono de mustang">
