--- a/pages/lanchas.html
+++ b/pages/lanchas.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lanchas</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css?v=lanchas2">
+
+
 </head>
 <body>
-    <h1><b1> Lanchas </b1></h1>
+    <h1><b> Lanchas </b></h1>
     <header>
         <nav>
             <ul>
-                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
-                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
-                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
-                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
-                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
+                <li><a href="../index.html"> Home</a> </li>
+                 <li><a href="login.html"> Login</a> </li>
+                 <li><a href="autos.html"> Autos</a> </li>
+                 <li><a href="motos.html"> Motos</a> </li>
+                 <li><a href="lanchas.html"> Lanchas</a> </li>
             </ul>
-            
+    
         </nav>
+    </header>
     <article>
         <h4>
             <u>
