--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carmotors</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../PRACTICO1/css/styles.css">
 </head>
 <body>
     <h1><b1> CarsMotors </b1></h1>
