--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../PRACTICO1/css/styles.css">
 </head>
 <body>
-    <h1><b1> CarsMotors </b1></h1>
+    <h1><b> CarsMotors </b></h1>
     <header>
         <nav>
             <ul>
