--- a/pages/lanchas.html
+++ b/pages/lanchas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lanchas</title>
-    <link rel="stylesheet" href="../css/styles.css?v=lanchas2">
+    <link rel="stylesheet" href="../css/styles.css">
 
 
 </head>
