--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html"> Home</a> </li>
-                 <li><a href="login.html"> Login</a> </li>
+                 <li><a href="../pages/login.html"> Login</a> </li>
                  <li><a href="autos.html"> Autos</a> </li>
                  <li><a href="motos.html"> Motos</a> </li>
                  <li><a href="lanchas.html"> Lanchas</a> </li>
