--- a/pages/motos.html
+++ b/pages/motos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-        <h1><b1> Motos </b1></h1>
+        <h1><b> Motos </b></h1>
     <header>
         <nav>
             <ul>
@@ -19,6 +19,7 @@
             </ul>
             
         </nav>
+    </header>
     <article>
         <h4>
             <u>
