--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carmotors</title>
-    <link rel="stylesheet" href="../PRACTICO1/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1><b> CarsMotors </b></h1>
     <header>
         <nav>
             <ul>
-                <li><a href="../PRACTICO1/pages/home.html"> Home</a> </li>
-                 <li><a href="../PRACTICO1/pages/login.html"> Login</a> </li>
-                 <li><a href="../PRACTICO1/pages/autos.html"> Autos</a> </li>
-                 <li><a href="../PRACTICO1/pages/motos.html"> Motos</a> </li>
-                 <li><a href="../PRACTICO1/pages/lanchas.html"> Lanchas</a> </li>
+                <li><a href="index.html"> Home</a> </li>
+                 <li><a href="pages/login.html"> Login</a> </li>
+                 <li><a href="pages/autos.html"> Autos</a> </li>
+                 <li><a href="pages/motos.html"> Motos</a> </li>
+                 <li><a href="pages/lanchas.html"> Lanchas</a> </li>
             </ul>
         </nav>
         
