--- a/index.html
+++ b/index.html
@@ -5,23 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carmotors</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <h1><b> CarsMotors </b></h1>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html"> Home</a> </li>
-                 <li><a href="pages/login.html"> Login</a> </li>
-                 <li><a href="pages/autos.html"> Autos</a> </li>
-                 <li><a href="pages/motos.html"> Motos</a> </li>
-                 <li><a href="pages/lanchas.html"> Lanchas</a> </li>
-            </ul>
-        </nav>
-        
+    <nav class="navbar navbar-expand-lg bg-danger">
+        <div class="container-fluid">
+            <a href="pages/home.html" class="navbar-brand">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    </header>
+            <div class="collapse navbar-collapse" id="navbarcollapse">
+                <ul class="navbar-nav">
+                    <LI class="navbar-item">
+                        <a href="pages/home.html" class="nav-link" >Home</a>
+                    </LI>
 
-    
+                    <LI class="navbar-item">
+                        <a href="pages/autos.html" class="nav-link" >Autos</a>
+                    </LI>
+
+                    <LI class="navbar-item">
+                        <a href="pages/lanchas.html" class="nav-link" >Lanchas</a>
+                    </LI>
+
+                    <LI class="navbar-item">
+                        <a href="pages/motos.html" class="nav-link" >motos</a>
+                    </LI>
+                </ul>
+                <button class="btn btn-success ms-auto" > <i class="bi bi-box-arrow-in-right"></i>
+                    <a href="pages/login.html " class=""></a>
+                </button>
+        </div>
+    </nav>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
