--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-danger">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a href="pages/home.html" class="navbar-brand">Home</a>
+            <a href="pages/home.html" class="navbar-brand">CarMotors</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,9 +34,10 @@
                         <a href="pages/motos.html" class="nav-link" >motos</a>
                     </LI>
                 </ul>
-                <button class="btn btn-success ms-auto" > <i class="bi bi-box-arrow-in-right"></i>
-                    <a href="pages/login.html " class=""></a>
-                </button>
+                  <a href="pages/login.html" class="btn btn-success ms-auto">
+                        <i class="bi bi-box-arrow-in-right"></i>
+                 </a>
+
         </div>
     </nav>
 
