--- a/pages/autos.html
+++ b/pages/autos.html
@@ -5,23 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autos</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 
 </head>
 <body>
-    <h1><b> Autos </b></h1>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html"> Home</a> </li>
-                 <li><a href="login.html"> Login</a> </li>
-                 <li><a href="autos.html"> Autos</a> </li>
-                 <li><a href="motos.html"> Motos</a> </li>
-                 <li><a href="lanchas.html"> Lanchas</a> </li>
-            </ul>
-            
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
+        <div class="container-fluid">
+            <a href="pages/home.html" class="navbar-brand">CarMotors</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarcollapse">
+                <ul class="navbar-nav">
+                    <LI class="navbar-item">
+                        <a href="pages/home.html" class="nav-link" >Home</a>
+                    </LI>
+
+                    <LI class="navbar-item">
+                        <a href="pages/autos.html" class="nav-link" >Autos</a>
+                    </LI>
+
+                    <LI class="navbar-item">
+                        <a href="pages/lanchas.html" class="nav-link" >Lanchas</a>
+                    </LI>
+
+                    <LI class="navbar-item">
+                        <a href="pages/motos.html" class="nav-link" >motos</a>
+                    </LI>
+                </ul>
+                  <a href="pages/login.html" class="btn btn-success ms-auto">
+                        <i class="bi bi-box-arrow-in-right"></i>
+                 </a>
+
+        </div>
+    </nav>
     <article>
         <h4>
             <u>
@@ -39,5 +59,7 @@
         <img src="../assets/mustang.png" alt="icono de mustang">
     </article>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
