--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
 
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav">
-                    <LI class="navbar-item">
+                    <li class="nav-item">
                         <a href="pages/home.html" class="nav-link" >Home</a>
-                    </LI>
+                    </li>
 
-                    <LI class="navbar-item">
+                    <li class="nav-item">
                         <a href="pages/autos.html" class="nav-link" >Autos</a>
-                    </LI>
+                    </li>
 
-                    <LI class="navbar-item">
+                    <li class="nav-item">
                         <a href="pages/lanchas.html" class="nav-link" >Lanchas</a>
-                    </LI>
+                    </li>
 
-                    <LI class="navbar-item">
+                    <li class="nav-item">
                         <a href="pages/motos.html" class="nav-link" >motos</a>
-                    </LI>
+                    </li>
                 </ul>
                   <a href="pages/login.html" class="btn btn-success ms-auto">
                         <i class="bi bi-box-arrow-in-right"></i>
                  </a>
+            </div>
 
         </div>
     </nav>
