--- a/pages/lanchas.html
+++ b/pages/lanchas.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
+      <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
         <div class="container-fluid">
             <a href="pages/home.html" class="navbar-brand">CarMotors</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,25 +19,26 @@
 
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav">
-                    <LI class="navbar-item">
-                        <a href="pages/home.html" class="nav-link" >Home</a>
-                    </LI>
+                    <li class="nav-item">
+                        <a href="/pages/home.html" class="nav-link" >Home</a>
+                    </li>
 
-                    <LI class="navbar-item">
-                        <a href="pages/autos.html" class="nav-link" >Autos</a>
-                    </LI>
+                    <li class="nav-item">
+                        <a href="/pages/autos.html" class="nav-link" >Autos</a>
+                    </li>
 
-                    <LI class="navbar-item">
-                        <a href="pages/lanchas.html" class="nav-link" >Lanchas</a>
-                    </LI>
+                    <li class="nav-item">
+                        <a href="/pages/lanchas.html" class="nav-link" >Lanchas</a>
+                    </li>
 
-                    <LI class="navbar-item">
-                        <a href="pages/motos.html" class="nav-link" >motos</a>
-                    </LI>
+                    <li class="nav-item">
+                        <a href="/pages/motos.html" class="nav-link" >motos</a>
+                    </li>
                 </ul>
-                  <a href="pages/login.html" class="btn btn-success ms-auto">
+                  <a href="/pages/login.html" class="btn btn-success ms-auto">
                         <i class="bi bi-box-arrow-in-right"></i>
                  </a>
+            </div>
 
         </div>
     </nav>
