--- a/pages/lanchas.html
+++ b/pages/lanchas.html
@@ -20,22 +20,22 @@
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="/pages/home.html" class="nav-link" >Home</a>
+                        <a href="home.html" class="nav-link" >Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="/pages/autos.html" class="nav-link" >Autos</a>
+                        <a href="autos.html" class="nav-link" >Autos</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="/pages/lanchas.html" class="nav-link" >Lanchas</a>
+                        <a href="lanchas.html" class="nav-link" >Lanchas</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="/pages/motos.html" class="nav-link" >motos</a>
+                        <a href="motos.html" class="nav-link" >motos</a>
                     </li>
                 </ul>
-                  <a href="/pages/login.html" class="btn btn-success ms-auto">
+                  <a href="login.html" class="btn btn-success ms-auto">
                         <i class="bi bi-box-arrow-in-right"></i>
                  </a>
             </div>
