--- a/pages/lanchas.html
+++ b/pages/lanchas.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 </head>
-<body>
+<body data-bs-theme="dark" style="background-color: #380a0a96;">
       <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
         <div class="container-fluid">
-            <a href="pages/home.html" class="navbar-brand">CarMotors</a>
+            <a href="home.html" class="navbar-brand">CarMotors</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
