--- a/pages/motos.html
+++ b/pages/motos.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body data-bs-theme="dark" style="background-color: #380a0a96;">
     <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
         <div class="container-fluid">
-            <a href="pages/home.html" class="navbar-brand">CarMotors</a>
+            <a href="home.html" class="navbar-brand">CarMotors</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,22 +19,22 @@
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav">
                     <LI class="navbar-item">
-                        <a href="pages/home.html" class="nav-link" >Home</a>
+                        <a href="home.html" class="nav-link" >Home</a>
                     </LI>
 
                     <LI class="navbar-item">
-                        <a href="pages/autos.html" class="nav-link" >Autos</a>
+                        <a href="autos.html" class="nav-link" >Autos</a>
                     </LI>
 
                     <LI class="navbar-item">
-                        <a href="pages/lanchas.html" class="nav-link" >Lanchas</a>
+                        <a href="lanchas.html" class="nav-link" >Lanchas</a>
                     </LI>
 
                     <LI class="navbar-item">
-                        <a href="pages/motos.html" class="nav-link" >motos</a>
+                        <a href="motos.html" class="nav-link" >motos</a>
                     </LI>
                 </ul>
-                  <a href="pages/login.html" class="btn btn-success ms-auto">
+                  <a href="login.html" class="btn btn-success ms-auto">
                         <i class="bi bi-box-arrow-in-right"></i>
                  </a>
 
