--- a/pages/home.html
+++ b/pages/home.html
@@ -41,6 +41,16 @@
         </div>
     </nav>
 
+
+   <section class="hero d-flex align-items-center justify-content-center text-center">
+  <div class="text-white">
+    <h1 class="display-4 fw-bold">Encontrá tu próximo vehículo al mejor precio</h1>
+    <p class="lead">Autos, lanchas y motos en un solo lugar</p>
+    <a href="autos.html" class="btn btn-primary btn-lg mt-3">Ver catálogo</a>
+  </div>
+</section>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
  
 </body>
