--- a/pages/autos.html
+++ b/pages/autos.html
@@ -48,7 +48,7 @@
             <div class="col">
             
                     <div class="card">
-                            <img src="/assets/ferrari.png" alt="item">
+                            <img src='../assets/ferrari.png' alt="item">
                     
                          <div class="card-body">
                                 <h5 class="card-title">El Ferrari Purosangue</h5>
