--- a/pages/motos.html
+++ b/pages/motos.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body data-bs-theme="dark" style="background-color: #0022e68a;">
+<body data-bs-theme="text-bg-secondary p-3" style="background-color: #0022e68a;">
     <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
         <div class="container-fluid">
             <a href="home.html" class="navbar-brand">CarMotors</a>
