--- a/index.html
+++ b/index.html
@@ -9,39 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body data-bs-theme="dark" style="background-color: #380a0a96;">
-    <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
-        <div class="container-fluid">
-            <a href="pages/home.html" class="navbar-brand">CarMotors</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+   <header>
+        
+    </header>
 
-            <div class="collapse navbar-collapse" id="navbarcollapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="pages/home.html" class="nav-link" >Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="pages/autos.html" class="nav-link" >Autos</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="pages/lanchas.html" class="nav-link" >Lanchas</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="pages/motos.html" class="nav-link" >motos</a>
-                    </li>
-                </ul>
-                  <a href="pages/login.html" class="btn btn-success ms-auto">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                 </a>
-            </div>
-
-        </div>
-    </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
