--- a/pages/autos/autos.html
+++ b/pages/autos/autos.html
@@ -11,37 +11,9 @@
 
 </head>
 <body data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
-        <div class="container-fluid">
-            <a href="home.html" class="navbar-brand">CarMotors</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <header>
 
-            <div class="collapse navbar-collapse" id="navbarcollapse">
-                <ul class="navbar-nav">
-                    <LI class="navbar-item">
-                        <a href="home.html" class="nav-link" >Home</a>
-                    </LI>
-
-                    <LI class="navbar-item">
-                        <a href="autos.html" class="nav-link" >Autos</a>
-                    </LI>
-
-                    <LI class="navbar-item">
-                        <a href="lanchas.html" class="nav-link" >Lanchas</a>
-                    </LI>
-
-                    <LI class="navbar-item">
-                        <a href="motos.html" class="nav-link" >motos</a>
-                    </LI>
-                </ul>
-                  <a href="login.html" class="btn btn-success ms-auto">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                 </a>
-
-        </div>
-    </nav>
+    </header>
 
     <div class="container-fluid">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4 my-5 mx-2">
@@ -174,5 +146,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script type="module" src="../../index.js"></script>
 </body>
 </html>
