--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -9,37 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body data-bs-theme="dark" style="background-color: #380a0a96;">
-    <nav class="navbar navbar-expand-lg bg-dark  navbar-dark">
-        <div class="container-fluid">
-            <a href="home.html" class="navbar-brand">CarMotors</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <header>
+        
+    </header>
 
-            <div class="collapse navbar-collapse" id="navbarcollapse">
-                <ul class="navbar-nav">
-                    <LI class="navbar-item">
-                        <a href="home.html" class="nav-link" >Home</a>
-                    </LI>
-
-                    <LI class="navbar-item">
-                        <a href="autos.html" class="nav-link" >Autos</a>
-                    </LI>
-
-                    <LI class="navbar-item">
-                        <a href="lanchas.html" class="nav-link" >Lanchas</a>
-                    </LI>
-
-                    <LI class="navbar-item">
-                        <a href="motos.html" class="nav-link" >motos</a>
-                    </LI>
-                </ul>
-                  <a href="login.html" class="btn btn-success ms-auto">
-                        <i class="bi bi-box-arrow-in-right"></i>
-                 </a>
-
-        </div>
-    </nav>
 
 
    <section class="hero d-flex align-items-center justify-content-center text-center">
@@ -48,10 +21,11 @@
     <p class="lead">Autos, lanchas y motos en un solo lugar</p>
     <a href="autos.html" class="btn btn-primary btn-lg mt-3">Ver catálogo</a>
   </div>
-</section>
+    </section>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script type="module" src="../../index.js"></script>
  
 </body>
 </html>
