--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body data-bs-theme="dark" bar-dark">
+<body data-bs-theme="dark" bar-dark>
     <header>
         
     </header>
@@ -19,7 +19,8 @@
 
     <h1><b1> Ingrese sus Datos </b1></h1>
 
-    <form action="" method="post">
+    <form id="formLogin" action="" method="post">
+
       <div>
             <label for="txtNombre">
                 Nombre:
@@ -73,5 +74,7 @@
     </form>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script> 
        <script type="module" src="../../index.js"></script>
+       <script type= "module" src="../../components/login.js"></script>
+
 </body>
 </html>
