--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -20,7 +20,7 @@
   <div class="text-white">
     <h1 class="display-4 fw-bold">Encontrá tu próximo vehículo al mejor precio</h1>
     <p class="lead">Autos, lanchas y motos en un solo lugar</p>
-    <a href="autos.html" class="btn btn-primary btn-lg mt-3">Ver catálogo</a>
+    <a href="../autos/autos.html" class="btn btn-primary btn-lg mt-3">Ver catálogo</a>
   </div>
     </section>
 
