--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body data-bs-theme="dark" style="background-color: #380a0a96;">
+<body>
     <header>
         
     </header>
@@ -20,7 +20,7 @@
   <div class="text-white">
     <h1 class="display-4 fw-bold">Encontrá tu próximo vehículo al mejor precio</h1>
     <p class="lead">Autos, lanchas y motos en un solo lugar</p>
-    <a href="../autos/autos.html" class="btn btn-primary btn-lg mt-3">Ver catálogo</a>
+    <a href="../carmotors/carmotors.html" class="btn btn-primary btn-lg mt-3">Ver catálogo</a>
   </div>
     </section>
 
