--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -17,16 +17,16 @@
 
     </header>
 
-    <form class="p-4">
+    <form id="Login" class="p-4">
 
   <div class="mb-3">
     <label for="inputEmail" class="form-label">Email</label>
-    <input type="email" class="form-control" id="inputEmail" placeholder="Ingresa tu email">
+    <input type="email" class="form-control" id="email" placeholder="Ingresa tu email">
   </div>
 
   <div class="mb-3">
     <label for="inputPassword" class="form-label">Contraseña</label>
-    <input type="password" class="form-control" id="inputPassword" placeholder="Ingresa tu contraseña">
+    <input type="password" class="form-control" id="pass" placeholder="Ingresa tu contraseña">
   </div>
 
   <button type="submit" class="btn btn-primary">Sign in</button>
